--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -50,7 +50,7 @@
           android:src="@drawable/ic_add_alarm"
           android:background="#121212"
           android:layout_alignParentBottom="true"
-          android:layout_toStartOf="@id/more_options"
+          android:layout_toStartOf="@id/more_option"
           android:clickable="true"
           android:focusable="true" />
 
@@ -58,7 +58,7 @@
           android:foreground="?android:attr/selectableItemBackground"
           android:layout_marginEnd="20dp"
           android:layout_marginStart="5dp"
-          android:id="@+id/more_options"
+          android:id="@+id/more_option"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:src="@drawable/ic_more_options"
